// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserPasswordField /> renders a passwordField 1`] = `
<Field
  component={[Function]}
  divClassName="div"
  hideValidationMessage={false}
  id="id"
  label="label"
  labelClassName="label-class"
  name="password"
  onBlur={[Function]}
  onFocus={[Function]}
  type="password"
/>
`;

exports[`<UserPasswordField /> renders a passwordField 2`] = `
<Field
  component={[Function]}
  divClassName="div"
  hideValidationMessage={true}
  id="id"
  label="label"
  labelClassName="label-class"
  name="password"
  onBlur={[Function]}
  onFocus={[Function]}
  type="password"
/>
`;

exports[`<UserPasswordField /> renders a passwordField 3`] = `
<Field
  component={[Function]}
  divClassName="div"
  hideValidationMessage={false}
  id="id"
  label="label"
  labelClassName="label-class"
  name="password"
  onBlur={[Function]}
  onFocus={[Function]}
  type="password"
/>
`;
